--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
 			<section>
 				<h2>Pipe</h2><br>
 				<p>The output of one command is the input of another command.</p><br>
-				<pre><code class="html">$ head cat.txt | wc</code></pre><br>
+				<pre><code class="html">$ head hello.txt | wc</code></pre><br>
 				<p>Use this command to chain multiple commands together.</p>
 			</section>
 
